[tool.poetry]
name = "haaslib"
version = "0.1.0"
description = ""
authors = ["suzumenobu"]
readme = "README.md"
packages = [
{ include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
